Wireshark div-by-zero crash in decode_color_temperature
This issue was migrated from bug 15281 in our old bug tracker.
Original bug information:
Reporter: Mateusz Jurczyk
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: Linux
Platform: x86-64
Version: Git
Attachments:
poc.zip: Reproducers
signal_sigfpe_7fffeb286dec_1439_8978e51201cbd78ec01fd257f92edba3.cap: Reproducer 1
signal_sigfpe_7fffeb286dec_335_6778c270a2a60c33477edada946cbb11.cap: Reproducer 2
signal_sigfpe_7fffeb286e4f_60_453cfe13f98f0e10884ef7694cce7e22.cap: Reproducer 3
See also: http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2018-19628